2001-12-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* [w3m-dev 02696]
	* configure: fix bashism of w3mhelp-{lynx,w3m}_{en,ja} expansion

2001-12-22  Dai Sato <satodai@dog.intcul.tohoku.ac.jp>

	* [w3m-dev 02687] version number in w3mhelp-*.html (+[w3m-dev 02689])
	* configure (cur_ver): w3mhelp*.html version subst
	* w3mhelp*.html: deleted
	* w3mhelp*.html.in: added

2001-12-22  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02682]
	* doc/README: remove README.dj
	* doc-jp/README.hp: deleted

2001-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02692] w3m on linux/ia64
	* mktable.c: #include "config.h"
	* mktable.c: #include "stdint.h" or uintptr_t typedef
	* mktable.c: use uintptr_t instead of unsigned int
	* configure: check pthread on linux
	* configure: add gc_cflags for linux/ia64,alpha,s390
	* configure: check stdint.h
	* configure (config.h): add $pthreadlib to GCLIB
	* configure (config.h): add $def_have_stdint_h
	* config.h.dist (HAVE_STDINT_H): added
	* Str.c: add #include <stdlib.h> for exit() on some platform (ia64)

2001-12-22  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02690] RC_DIR in scripts
	* configure (config.h): add RC_DIR
	* config.h.dist: ditto
	* XMakefile: pass RC_DIR
	* scripts/Makefile: subst RC_DIR
	* scripts/dirlist.cgi.in: $RC_DIR initial value
	* scripts/w3mhelp.cgi.in: ditto
	* scripts/w3mhelp.cgi.in (cygwin_pathconv): added

2001-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* version.c.in: 0.2.3.2+cvs

2001-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.3.2 - Security fix in w3m/scripts
	* version.c.in: update
	* w3mhelp-*.html: version 0.2.3.2
	* doc/README: version 0.2.3.2, release date
	* doc-jp/README: ditto
	* NEWS: added

2001-12-22  Fumitoshi UKAI  <ukai@debian.or.jp>

	* scripts/w3mhelp.cgi.in: lang=[a-z][a-z] only

2001-12-22  Hironori Sakamoto <h-saka@lsi.nec.co.jp>

	* Security hole in multipart.cgi.in, w3mman2html.cgi.in
	* scripts/w3mhelp.cgi.in: open(F, "< $var") instead of open(F, $var)