@@ -1,3 +1,9 @@
+2001-12-23  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02699] initialization too late
+	* main.c (MAIN): initializations moved before arg processing
+	* debian bug closes: Bug##102445: ignores SIGWINCH while downloading
+
 2001-12-22  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>
 
 	* [w3m-dev 02696]
